Add bower and composer to image. Get rit-pacman and handsontable from volumes, and prepare them

--- a/pacman/Dockerfile
+++ b/pacman/Dockerfile
@@ -3,11 +3,17 @@ FROM drupal:7.43-apache
 RUN apt-get update && apt-get install -y \
 	unzip \
 	libxslt-dev \
-	mysql-client
+	mysql-client \
+	git \
+	nodejs \
+	npm
 
 RUN docker-php-ext-install -j$(nproc) xsl
 
 WORKDIR /var/www/html/sites/all/modules
+
+RUN ln -s /usr/bin/nodejs /usr/bin/node
+
 ENV ISLANDORA_VERSION 1.6
 
 RUN curl -fSL "https://github.com/islandora/islandora_xml_forms/archive/7.x-${ISLANDORA_VERSION}.zip" -o islandora_xml_forms.zip \
@@ -25,9 +31,15 @@ RUN curl -fSL "https://github.com/islandora/objective_forms/archive/7.x-${ISLAND
 	&& rm objective_forms.zip \
 	&& chown -R www-data:www-data .
 
+RUN curl -fSL https://getcomposer.org/download/1.0.0-beta1/composer.phar -o /usr/bin/composer \
+	&& chmod +x /usr/bin/composer
+
+RUN npm install -g bower
+
 RUN curl -fSL http://files.drush.org/drush.phar -o /usr/bin/drush \
 	&& chmod +x /usr/bin/drush
 
-ADD bootstrap.sh /var/www/html/
+VOLUME ["/var/www/html/sites/all/modules/pacman", "/var/www/html/sites/all/modules/handsontable"]
 
+ADD bootstrap.sh /var/www/html/
 CMD /var/www/html/bootstrap.sh
