--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,7 @@
 # Auto detect text files and perform LF normalization
 * text=auto
 
-# Shell scripts forced to LF
+# Scripts forced to LF
 *.sh text eol=lf
+*.py text eol=lf
+*.cfg text eof=lf
