Allow setcifsacl to run (only fixes native linux docker, not boot2docker)

--- a/irods/Dockerfile
+++ b/irods/Dockerfile
@@ -35,6 +35,10 @@ RUN wget ftp://ftp.renci.org/pub/irods/releases/${IRODS_VERSION}/ubuntu14/irods-
 
 RUN mkdir /opt/irods && mkdir /mnt/ingestZone
 
+# Bug in cifs-utils package causes setcifsacl not to work without setting this symlink
+# https://bugs.launchpad.net/ubuntu/+source/cifs-utils/+bug/1372120
+RUN mkdir /etc/cifs-utils && ln -s /usr/lib/x86_64-linux-gnu/cifs-utils/idmapwb.so /etc/cifs-utils/idmap-plugin
+
 ADD ./genresp.sh /opt/irods/genresp.sh
 ADD ./setupdb.sh /opt/irods/setupdb.sh
 ADD ./config.sh /opt/irods/config.sh
