iRODS-REST and Tomcat8 working

--- a/irods/Dockerfile
+++ b/irods/Dockerfile
@@ -16,7 +16,12 @@ RUN apt-get update \
     python-ldap \
     lsof \
     make \
-    cifs-utils
+    cifs-utils \
+    software-properties-common \
+    python-software-properties
+
+RUN echo "oracle-java8-installer shared/accepted-oracle-license-v1-1 select true" | /usr/bin/debconf-set-selections
+RUN apt-add-repository ppa:webupd8team/java && apt-get update && apt-get install oracle-java8-installer -y
 
 RUN locale-gen en_US.UTF-8
 ENV LANG en_US.UTF-8
@@ -45,6 +50,13 @@ ADD ./config.sh /opt/irods/config.sh
 ADD ./bootstrap.sh /opt/irods/bootstrap.sh
 ADD ./prepend_ruleset.py /opt/irods/prepend_ruleset.py
 RUN chmod a+x /opt/irods/*
+
+# Install iRODS-REST
+RUN wget -P /tmp/ http://apache.mirror1.spango.com/tomcat/tomcat-8/v8.0.33/bin/apache-tomcat-8.0.33.tar.gz
+RUN wget -P /tmp/ https://code.renci.org/gf/download/frsrelease/243/2742/irods-rest.war
+RUN tar xvf /tmp/apache-tomcat-8.0.33.tar.gz -C /tmp/ && mv /tmp/apache-tomcat-8.0.33/ /var/lib/tomcat8
+RUN mv /tmp/irods-rest.war /var/lib/tomcat8/webapps/ && mkdir /etc/irods-ext
+ADD ./irods-rest.properties /etc/irods-ext/irods-rest.properties
 
 EXPOSE 1248 1247
 
