Added the cloudbrowser module and the UM theme Both will be enabled and theme set by default

--- a/pacman/Dockerfile
+++ b/pacman/Dockerfile
@@ -45,7 +45,7 @@ RUN npm install -g bower
 RUN curl -fSL http://files.drush.org/drush.phar -o /usr/bin/drush \
 	&& chmod +x /usr/bin/drush
 
-VOLUME [ "/var/www/html/sites/all/modules/pacman", "/var/www/html/sites/all/modules/handsontable", "/var/www/html/sites/all/modules/rit_forms" ]
+VOLUME [ "/var/www/html/sites/all/modules/pacman", "/var/www/html/sites/all/modules/handsontable", "/var/www/html/sites/all/modules/rit_forms" ,"/var/www/html/sites/all/themes/fhml_um_theme_demo","/var/www/html/sites/all/modules/cloudbrowser_module" ]
 
 ADD bootstrap.sh /var/www/html/
 RUN chmod +x /var/www/html/bootstrap.sh
