--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ pacman:
     - ../cloudbrowser_module:/var/www/html/sites/all/modules/cloudbrowser_module
     - ../fhml_um_theme_demo:/var/www/html/sites/all/themes/fhml_um_theme_demo
   environment:
-      VIRTUAL_HOST: pacman.rit.local
+      VIRTUAL_HOST: pacman.dev.rit.unimaas.nl
 irods:
   build: irods/
   ports:
@@ -32,6 +32,8 @@ irods:
     - ../irods-helper-cmd:/helpers
   # Required for CIFS mounting. cap-add not enough in Windows for some reason.
   privileged: true
+  environment:
+      VIRTUAL_HOST: irods.dev.rit.unimaas.nl
 db:
   image: mysql:5.6
   environment:
@@ -54,7 +56,7 @@ irods-frontend:
   links:
     - irods
   environment:
-    VIRTUAL_HOST: frontend.rit.local
+    VIRTUAL_HOST: frontend.dev.rit.unimaas.nl
 proxy:
   image: jwilder/nginx-proxy
   ports:
