Fix two more ritZone to nlmumc

--- a/irods-frontend/irods-rest.properties
+++ b/irods-frontend/irods-rest.properties
@@ -1,6 +1,6 @@
 irods.host=irods
 irods.port=1247
-irods.zone=ritZone
+irods.zone=nlmumc
 utilize.packing.streams=true
 auth.type=STANDARD
 default.storage.resource=demoResc
