--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,7 @@ pacman:
     - ../cloudbrowser_module:/var/www/html/sites/all/modules/cloudbrowser_module
     - ../fhml_um_theme_demo:/var/www/html/sites/all/themes/fhml_um_theme_demo
   environment:
+# TODO: Make a wrapper that inserts variable here
     VIRTUAL_HOST: pacman.dev.rit.unimaas.nl
 irods:
   build: irods/
@@ -26,6 +27,7 @@ irods:
     INGEST_MOUNT: //fhml-srv002.unimaas.nl/ingest
     INGEST_USER: p.vanschayck
     LDAP_USER: M4i-nano-wiki
+# TODO: Make a wrapper that inserts variable here
     VIRTUAL_HOST: irods.dev.rit.unimaas.nl
   volumes:
     - ./irods.secrets.cfg:/etc/secrets:ro
@@ -44,13 +46,10 @@ irods-db:
     POSTGRES_PASSWORD: foobar
 irods-frontend:
   build: irods-frontend/
-#  ports:
-#    - "80:80"
   links:
     - irods
   environment:
-    # Indicate the FQDN of the Docker host that is going to run this container.
-#    FQDN_HOST: fhml-srv019.unimaas.nl
+# TODO: Make a wrapper that inserts variable here
     VIRTUAL_HOST: frontend.dev.rit.unimaas.nl
 proxy:
   image: jwilder/nginx-proxy
