--- a/irods-frontend/Dockerfile
+++ b/irods-frontend/Dockerfile
@@ -48,8 +48,9 @@ RUN wget -P /tmp/ https://code.renci.org/gf/download/frsrelease/239/2712/irods-c
     && sed -i "s|\"+location.hostname+\":8080|\"+location.hostname+\"|" /var/www/html/irods-cloud-frontend/app/components/globals.js
 
 ### MUMC-modified version of Cloud browser. Uncomment the following lines if necessary. ###
-#ADD ./irods-cloud-frontend-1.0.0-RELEASE_MUMC.zip /tmp/irods-cloud-frontend-1.0.0-RELEASE_MUMC.zip
-#RUN unzip -o /tmp/irods-cloud-frontend-1.0.0-RELEASE_MUMC.zip -d /var/www/html/
+ADD ./irods-cloud-frontend-1.0.0-RELEASE_MUMC.zip /tmp/irods-cloud-frontend-1.0.0-RELEASE_MUMC.zip
+RUN unzip -o /tmp/irods-cloud-frontend-1.0.0-RELEASE_MUMC.zip -d /var/www/html/ \
+     && sed -i "s|\"+location.hostname+\":8080|\"+location.hostname+\"|" /var/www/html/irods-cloud-frontend/app/components/globals.js
 
 EXPOSE 80
 
