--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,8 +12,7 @@ pacman:
     - ../cloudbrowser_module:/var/www/html/sites/all/modules/cloudbrowser_module
     - ../fhml_um_theme_demo:/var/www/html/sites/all/themes/fhml_um_theme_demo
   environment:
-# TODO: Make a wrapper that inserts variable here
-    VIRTUAL_HOST: pacman.dev.rit.unimaas.nl
+    VIRTUAL_HOST: pacman.${RIT_ENV}.rit.unimaas.nl
 irods:
   build: irods/
   ports:
@@ -27,8 +26,7 @@ irods:
     INGEST_MOUNT: //fhml-srv002.unimaas.nl/ingest
     INGEST_USER: p.vanschayck
     LDAP_USER: M4i-nano-wiki
-# TODO: Make a wrapper that inserts variable here
-    VIRTUAL_HOST: irods.dev.rit.unimaas.nl
+    VIRTUAL_HOST: irods.${RIT_ENV}.rit.unimaas.nl
   volumes:
     - ./irods.secrets.cfg:/etc/secrets:ro
     - ../irods-ruleset:/rules
@@ -49,8 +47,7 @@ irods-frontend:
   links:
     - irods
   environment:
-# TODO: Make a wrapper that inserts variable here
-    VIRTUAL_HOST: frontend.dev.rit.unimaas.nl
+    VIRTUAL_HOST: frontend.${RIT_ENV}.rit.unimaas.nl
 proxy:
   image: jwilder/nginx-proxy
   log_driver: none
