Remove extra slash for irods-rest reverse proxy

--- a/irods-frontend/000-default.conf
+++ b/irods-frontend/000-default.conf
@@ -28,8 +28,8 @@
         #Include conf-available/serve-cgi-bin.conf
 
         ProxyRequests off
-        ProxyPass /rest http://localhost:8080/irods-rest/
-        ProxyPassReverse /rest http://localhost:8080/irods-rest/
+        ProxyPass /rest http://localhost:8080/irods-rest
+        ProxyPassReverse /rest http://localhost:8080/irods-rest
         ProxyPass /irods-cloud-backend http://localhost:8080/irods-cloud-backend
         ProxyPassReverse /irods-cloud-backend http://localhost:8080/irods-cloud-backend
 
