Allow to build curl microservices

--- a/irods/Dockerfile
+++ b/irods/Dockerfile
@@ -18,7 +18,8 @@ RUN apt-get update \
     make \
     cifs-utils  \
     g++ \
-    libssl-dev
+    libssl-dev \
+    libcurl4-openssl-dev
 
 
 RUN locale-gen en_US.UTF-8
