Manually fix the PHP version to 5.6, no longer track the official Drupal releases

--- a/pacman/Dockerfile
+++ b/pacman/Dockerfile
@@ -1,4 +1,27 @@
-FROM drupal:7.50-apache
+# Stay at PHP 5.6 for now
+FROM php:5.6-apache
+
+RUN a2enmod rewrite
+
+# install the PHP extensions we need
+RUN apt-get update && apt-get install -y libpng12-dev libjpeg-dev libpq-dev \
+	&& rm -rf /var/lib/apt/lists/* \
+	&& docker-php-ext-configure gd --with-png-dir=/usr --with-jpeg-dir=/usr \
+	&& docker-php-ext-install gd mbstring pdo pdo_mysql pdo_pgsql zip
+
+WORKDIR /var/www/html
+
+# https://www.drupal.org/node/3060/release
+ENV DRUPAL_VERSION 7.50
+ENV DRUPAL_MD5 f23905b0248d76f0fc8316692cd64753
+
+RUN curl -fSL "http://ftp.drupal.org/files/projects/drupal-${DRUPAL_VERSION}.tar.gz" -o drupal.tar.gz \
+	&& echo "${DRUPAL_MD5} *drupal.tar.gz" | md5sum -c - \
+	&& tar -xz --strip-components=1 -f drupal.tar.gz \
+	&& rm drupal.tar.gz \
+	&& chown -R www-data:www-data sites
+
+## The part above could be restructured to its own Drupal-php56 Dockerfile, but we best have an image repository before we do that
 
 RUN apt-get update && apt-get install -y \
 	unzip \
@@ -64,8 +87,6 @@ RUN cd /var/www/html \
     && drush dl jquery_update
 
 VOLUME [ "/var/www/html/sites/all/modules/pacman", "/var/www/html/sites/all/modules/handsontable", "/var/www/html/sites/all/modules/rit_forms" ,"/var/www/html/sites/all/themes/fhml_um_theme_demo","/var/www/html/sites/all/modules/cloudbrowser_module", "/var/www/html/sites/all/modules/islandora_ontology_autocomplete", "/var/www/html/sites/all/modules/rit_faker" ]
-
-WORKDIR /var/www/html
 
 ADD bootstrap.sh /var/www/html/
 RUN chmod +x /var/www/html/bootstrap.sh
