Set pacman as the default virtual host (usefull if you access the nginx-proxy using any other host)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -53,6 +53,8 @@ irods-frontend:
     VIRTUAL_HOST: frontend.${RIT_ENV}.rit.unimaas.nl
 proxy:
   image: jwilder/nginx-proxy
+  environment:
+    DEFAULT_HOST: pacman.${RIT_ENV}.rit.unimaas.nl
   log_driver: none
   ports:
     - "80:80"
