--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,6 @@
 pacman:
   build: pacman/
+  hostname: pacman
   links:
     - db
     - irods
@@ -16,47 +17,63 @@ pacman:
     VIRTUAL_HOST: pacman.${RIT_ENV}.rit.unimaas.nl
     OLS_URL: http://fhml-srv018.unimaas.nl:8081/ols-boot
 irods:
-  build: irods/
+  build: icat/
+  hostname: irods
   ports:
     - "1247:1247"
     - "1248:1248"
   links:
+    - ires
     - irods-db
   environment:
     RODS_PASSWORD: irods
     PGPASSWORD: foobar
-    INGEST_MOUNT: //fhml-srv002.unimaas.nl/ingest
-    INGEST_USER: p.vanschayck
-    LDAP_USER: M4i-nano-wiki
     VIRTUAL_HOST: irods.${RIT_ENV}.rit.unimaas.nl
   volumes:
     - ./irods.secrets.cfg:/etc/secrets:ro
     - ../irods-ruleset:/rules
     - ../irods-helper-cmd:/helpers
     - ../irods-microservices:/microservices
+ires:
+  build: ires/
+  hostname: ires
+  environment:
+    RODS_PASSWORD: irods
+    PGPASSWORD: foobar
+    INGEST_MOUNT: //fhml-srv002.unimaas.nl/ingest
+    INGEST_USER: p.vanschayck
+    LDAP_USER: M4i-nano-wiki
+    VIRTUAL_HOST: ires.${RIT_ENV}.rit.unimaas.nl
+  volumes:
+    - ./irods.secrets.cfg:/etc/secrets:ro
   # Required for CIFS mounting. cap-add not enough in Windows for some reason.
   privileged: true
 db:
   image: mysql:5.6
+  hostname: irods-db
   environment:
     MYSQL_DATABASE: pacman
     MYSQL_ROOT_PASSWORD: foobar
 irods-db:
   image: postgres:9.4
+  hostname: irods-db
   environment:
     POSTGRES_PASSWORD: foobar
 irods-frontend:
   build: irods-frontend/
+  hostname: irods-frontend
   links:
     - irods
   environment:
     VIRTUAL_HOST: frontend.${RIT_ENV}.rit.unimaas.nl
 metalnx:
   image: metalnx/metalnx-web:1.0-latest
+  hostname: metalnx
   ports:
       - "8080:8080"
   links:
       - irods
+      - ires
   environment:
     IRODS_HOST: irods
     IRODS_PORT: 1247
